<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<artifactId>13-highly-scalable-database-designs</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>employees-command</module>
		<module>employees-query</module>
	</modules>

	<parent>
		<groupId>io.github.bhuwanupadhyay</groupId>
		<artifactId>factory-parent</artifactId>
		<version>1.0.2</version>
	</parent>

	<scm>
		<url>https://github.com/BhuwanUpadhyay/13-highly-scalable-database-designs</url>
		<connection>
			scm:git:git://github.com/BhuwanUpadhyay/13-highly-scalable-database-designs.git
		</connection>
		<developerConnection>
			scm:git:ssh://git@github.com/BhuwanUpadhyay/13-highly-scalable-database-designs.git
		</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<name>Highly Scalable Database Designs</name>
	<description>Demo Project to Highly Scalable Database Designs.</description>
	<url>https://github.com/BhuwanUpadhyay/13-highly-scalable-database-designs</url>

	<properties>
		<java.version>14</java.version>
		<maven-compiler-plugin.compilerArgs>
			--enable-preview
		</maven-compiler-plugin.compilerArgs>
	</properties>

	<dependencies>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
